--- a/gb/17/5/14/n9141369.md
+++ b/gb/17/5/14/n9141369.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/myn254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/myn254/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/myn254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/myn254/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/myn254/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/myn254/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/myn254/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/myn254/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/myn254/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/myn254/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/myn254/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国26地法轮功学员恭贺世界法轮大法日暨李洪志大师华诞</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1211854948-320x200.jpg" />
+
 <h6></h6>
 <hr>
 	<p>【大纪元2017年05月13日讯】<br />
 <br /><B></p>
-<hr size=1>芝加哥大法弟子恭祝慈悲伟大的师尊生日快乐！普天同庆<ahref="https://github.com/myn254/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>暨大法洪传世界二十五周年！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-11-705092300974_01.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-11-705092300974_01--ss.jpg></a><br /></center><br /><B></p>
+<hr size=1>芝加哥大法弟子恭祝慈悲伟大的师尊生日快乐！普天同庆<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>暨大法洪传世界二十五周年！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-11-705092300974_01.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-11-705092300974_01--ss.jpg></a><br /></center><br /><B></p>
 <hr size=1>美国密苏里州全体大法弟子庆贺法轮大法洪传二十五周年！恭贺师尊华诞！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-10-0422113086690_01.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-10-0422113086690_01--ss.jpg></a><br /></center><br /><B></p>
 <hr size=1>美国明尼苏达大法弟子全家恭祝慈悲伟大的师父生日快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-10-1705091223109735.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-10-1705091223109735--ss.jpg></a><br /></center><br /><B></p>
-<hr size=1>美国爱荷华州全体大法弟子恭祝师尊生日快乐！暨<ahref="https://github.com/myn254/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！恭贺法轮大法洪传世界二十五周年！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-10-705091618767p1_01.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-10-705091618767p1_01--ss.jpg></a><br /></center><br />感师恩<br />更寒高处已无情<br />唯有师尊慈悲盈<br />一念大愿撼寰宇<br />力挽乾坤三界行<br />亿万艰险旧恶阻<br />洪微纷繁雨打萍<br />兆劫甘苦沧桑尽<br />壮丽新宇满天星<br /><B></p>
+<hr size=1>美国爱荷华州全体大法弟子恭祝师尊生日快乐！暨<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！恭贺法轮大法洪传世界二十五周年！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-10-705091618767p1_01.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-10-705091618767p1_01--ss.jpg></a><br /></center><br />感师恩<br />更寒高处已无情<br />唯有师尊慈悲盈<br />一念大愿撼寰宇<br />力挽乾坤三界行<br />亿万艰险旧恶阻<br />洪微纷繁雨打萍<br />兆劫甘苦沧桑尽<br />壮丽新宇满天星<br /><B></p>
 <hr size=1>美国拉斯维加斯全体大法弟子恭祝师尊生日快乐！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-10-705052010917p0_01.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-10-705052010917p0_01--ss.jpg></a><br /></center><br />拉斯维加斯全体大法弟子敬上<br /><B></p>
 <hr size=1>美国北卡罗纳州全体大法弟子恭祝师尊华诞，庆祝世界法轮大法日！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-13-greeting-nc_2293.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-13-greeting-nc_2293--ss.jpg /></a><br /></center><br /><B></p>
 <hr size=1>北卡大法弟子偕同父母恭贺慈悲伟大的师父华诞！庆祝世界法轮大法日！</B><br /><center><br /><ahref=http://www.minghui.org/mh/article_images/2017-5-10-705082352475_01.jpg><img src=http://www.minghui.org/mh/article_images/2017-5-10-705082352475_01--ss.jpg></a><br /></center><br /><B></p>
@@ -60,36 +60,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/16/5/14/n7895934.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/16/5/14/n7895936.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(48条)</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/16/5/14/n7895941.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/16/5/14/n7895947.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/14/n7895934.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/14/n7895936.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(48条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/14/n7895941.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/14/n7895947.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/myn254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11293194.md#1" target="_blank">【征文】章阁：荒谬的社会发展“五阶段论”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099864.md#1">中共火箭失控 飞掠洛城和纽约 坠入大西洋</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099999.md#1">【新闻看点】真把世界惹恼了 北京最怕什么？</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/10/n12096347.md#1">【最新疫情5·11】川普：对重谈美中协议没兴趣</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099257.md#1">武统台湾？台前国大代表：共军军力吹牛露馅</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12100344.md#1">美国推倒中共防火墙计划 班农：实质行动中</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/10/n12096663.md#1">美国小狗看到自己上电视 高兴得连跳26次</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/12/n12100709.md#1">黄秋生抵台进行居家隔离 自曝准备入籍台湾</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12098060.md#1">尹馨无故高烧入院 一度确诊癌症二期急切肾</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099898.md#1">与女儿一起临摹书法 孙俪赞小花毛笔字特棒</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/10/n12097513.md#1">结婚纪念日赶上母亲节 章子怡汪峰晒合照庆祝</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/8/n12092756.md#1">美国先知凯西  预言当今的中国与世界</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/9/n12095021.md#1">武汉瘟疫治寻根 历史天象醒今人（下）</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/4/6/n12007049.md#1">天人预言未来事  识破妖精本色</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/6/n12088824.md#1">中国人的姓名字号（1）</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/7/n12091012.md#1">获罪于天无所祷也 他们遭雷劈并不是偶然的</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/myn254/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/myn254/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/5/14/n9141369.htm">美国26地法轮功学员恭贺世界法轮大法日暨李洪志大师华诞</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/5/14/n9141369.htm">美国26地法轮功学员恭贺世界法轮大法日暨李洪志大师华诞</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/myn254/djy/blob/master/gb/17/5/14/n9141369.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/myn254/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/myn254/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/myn254/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/5/14/n9141369.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
